# Vic-Catch

./: .gitignore  README.md  main.py  project.md  pyproject.toml
dbt_vic/: dbt_project.yml  package-lock.yml  packages.yml
dbt_vic/models/: sources.yml
dbt_vic/models/marts/: int_hex_feature.sql  mart_precinct_score.sql  mrt_stop_infrastructure.sql  mrt_transit_catchments.sql  schema.yml
dbt_vic/models/staging/: sources.yml  stg_abs_demographics.sql  stg_gtfs_service_hour.sql  stg_gtfs_stops.sql  stg_hex_grid.sql  stg_osm_features.sql
dbt_vic/notebooks/: precinct_clustering.ipynb
extract/: fetch_gtfs.py  fetch_overpass.py  stage_abs.py  stage_gtfs_schedule.py  stage_hex_grid.py  stage_overpass.py  upload_to_gcs.py
streamlit/: app.py
