[project]
name = "vic-catch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Data extraction & spatial processing
    "pandas>=2.2.0",
    "geopandas>=0.14.3",
    "shapely>=2.0.3",
    "requests>=2.31.0",
    # GCP Integration
    "google-cloud-storage>=2.14.0",
    "google-cloud-bigquery>=3.17.0",
    "db-dtypes>=1.2.0", # Required for BQ to pandas conversion
    # Frontend
    "streamlit>=1.31.0",
    "pydeck>=0.8.1",
    # Environment variables
    "python-dotenv>=1.0.1",
    "h3>=4.4.2",
    "jupyter>=1.1.1",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "lightgbm>=4.6.0",
    "plotly>=6.7.0",
    "geopy>=2.4.1",
]
